comment in bearcontroller class

--- a/force-app/main/default/classes/BearController.cls
+++ b/force-app/main/default/classes/BearController.cls
@@ -1,3 +1,4 @@
+/*BearController*/
 public with sharing class BearController {
     @AuraEnabled(Cacheable=true)
     public static Bear__c[] getAllBears() {
